基础架构更新 stylelint 安装

--- a/fa-core/src/index.html
+++ b/fa-core/src/index.html
@@ -9,6 +9,6 @@
     </head>
 
     <body class="g-theme">
-        <main id="react-app"></main>
+        <div id="react-app"></div>
     </body>
 </html>
