--- a/ci/src/index.html
+++ b/ci/src/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
         <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' http://* 'unsafe-inline'; script-src *;" /> -->
         <meta name="renderer" content="webkit" />
-        <title>中集冷云</title>
-        <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=imVKGizF8et1yKFFASU5rIahxeuViPQi"></script>
+        <title>website</title>
     </head>
 
     <body class="g-theme">
